--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -733,9 +733,49 @@ VRTemplateMap_C.Actor=True
 VRTemplateMap_C.Input=True
 K2Node_CustomEvent.GraphNodeDetail=True
 Baseball_C.Tick=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+Scoreboard_C.Appearance=True
+Scoreboard_C.Designer=True
+Scoreboard_C.Input=True
+Scoreboard_C.Interaction=True
+Scoreboard_C.Performance=True
+Scoreboard_C.Layout=True
+Scoreboard_C.Behavior=True
+Scoreboard_C.Render Transform=True
+Scoreboard_C.Accessibility=True
+Scoreboard_C.Clipping=True
+Scoreboard_C.Navigation=True
+Scoreboard_C.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
+OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -797,7 +837,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.800
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1282.400 Y=722.400
+WindowSize=X=1284.000 Y=724.000
 None=======
 InitiallyMaximized=True
 
@@ -1775,6 +1815,8 @@ StaticMeshEditor.TimeStamp=2022.02.07-07.08.59
 StaticMeshEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2022.01.31-19.03.56
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.02.07-07.08.57
+SequencerWidgets.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1933,26 +1975,26 @@ None=======
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem1=/Game/VRTemplate/Blueprints/Baseball
-MRUItem2=/Game/Baseball/baseball
-MRUItem3=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem4=/Game/Baseball/Scene_-_Root
-MRUItem5=/Game/Meshes/BaseballBatWithPhysics
-MRUItem6=/Game/VRTemplate/Blueprints/target
-MRUItem7=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem8=/sketchfa/baseball/baseball
-MRUItem9=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem10=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem11=/Game/Meshes/lambert1
-MRUItem12=/Game/Meshes/baseball_ball_01
-MRUItem13=/Game/Meshes/StaticMesh1
-MRUItem14=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem15=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem16=/Game/VRTemplate/Blueprints/Weapon
-MRUItem17=/sketchfa/baseball/baseball/baseball
-MRUItem18=/sketchfa/baseball/baseball/Scene_-_Root_Scene_-_Root
-MRUItem19=/Game/Meshes/StaticMesh
+MRUItem0=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem1=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem2=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem3=/Game/VRTemplate/Blueprints/Baseball
+MRUItem4=/Game/Baseball/baseball
+MRUItem5=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem6=/Game/Baseball/Scene_-_Root
+MRUItem7=/Game/Meshes/BaseballBatWithPhysics
+MRUItem8=/Game/VRTemplate/Blueprints/target
+MRUItem9=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem10=/sketchfa/baseball/baseball
+MRUItem11=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem12=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem13=/Game/Meshes/lambert1
+MRUItem14=/Game/Meshes/baseball_ball_01
+MRUItem15=/Game/Meshes/StaticMesh1
+MRUItem16=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem17=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem18=/Game/VRTemplate/Blueprints/Weapon
+MRUItem19=/sketchfa/baseball/baseball/baseball
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1968,6 +2010,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 StaticMesh=
 StreamableRenderAsset=
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Baseball/baseball.baseball;
@@ -2006,6 +2052,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/Baseball/Scene_-_Root_Scene_-_Root.Scene_-_Root=1
 /Game/Baseball/baseball.baseball=1
 /Game/VRTemplate/Blueprints/Baseball.Baseball=1
+/Game/VRTemplate/Blueprints/WidgetMenu.WidgetMenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2122,4 +2169,77 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[WidgetTemplatesExpanded]
+Common=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
