--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -771,11 +771,41 @@ Scoreboard_C.Accessibility=True
 Scoreboard_C.Clipping=True
 Scoreboard_C.Navigation=True
 Scoreboard_C.Localization=True
+Menu_C.Tick=True
+Menu_C.Default=True
+Menu_C.Replication=True
+Menu_C.Rendering=True
+Menu_C.Collision=True
+Menu_C.Actor=True
+Menu_C.Input=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Filter=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.Actor=True
+PointLight.Actor=True
+PointLight.Cooking=True
+PointLight.Tags=True
+PointLight.RayTracing=True
+PointLight.DistanceFieldShadows=True
+PointLight.Light Profiles=True
+PointLight.LightFunction=True
+PointLight.Performance=True
+PointLight.Lightmass=True
+PointLight.Rendering=True
+PointLight.Light=True
+PointLight.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
-OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -837,7 +867,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.800
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1284.000 Y=724.000
+WindowSize=X=1285.600 Y=725.600
 None=======
 InitiallyMaximized=True
 
@@ -1972,29 +2002,29 @@ bConvertSceneUnit=False
 None=======
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem1=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem2=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem3=/Game/VRTemplate/Blueprints/Baseball
-MRUItem4=/Game/Baseball/baseball
-MRUItem5=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem6=/Game/Baseball/Scene_-_Root
-MRUItem7=/Game/Meshes/BaseballBatWithPhysics
-MRUItem8=/Game/VRTemplate/Blueprints/target
-MRUItem9=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem10=/sketchfa/baseball/baseball
-MRUItem11=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem12=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem13=/Game/Meshes/lambert1
-MRUItem14=/Game/Meshes/baseball_ball_01
-MRUItem15=/Game/Meshes/StaticMesh1
-MRUItem16=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem17=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem18=/Game/VRTemplate/Blueprints/Weapon
-MRUItem19=/sketchfa/baseball/baseball/baseball
+MRUItem0=/Game/VRTemplate/Blueprints/Menu
+MRUItem1=/Game/VRTemplate/Blueprints/Baseball
+MRUItem2=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem3=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem4=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem5=/Game/Baseball/baseball
+MRUItem6=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem7=/Game/Baseball/Scene_-_Root
+MRUItem8=/Game/Meshes/BaseballBatWithPhysics
+MRUItem9=/Game/VRTemplate/Blueprints/target
+MRUItem10=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem11=/sketchfa/baseball/baseball
+MRUItem12=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem13=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem14=/Game/Meshes/lambert1
+MRUItem15=/Game/Meshes/baseball_ball_01
+MRUItem16=/Game/Meshes/StaticMesh1
+MRUItem17=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem18=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem19=/Game/VRTemplate/Blueprints/Weapon
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2016,6 +2046,7 @@ Widget=
 Visual=
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
@@ -2053,6 +2084,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/Baseball/baseball.baseball=1
 /Game/VRTemplate/Blueprints/Baseball.Baseball=1
 /Game/VRTemplate/Blueprints/WidgetMenu.WidgetMenu=1
+/Game/VRTemplate/Blueprints/Menu.Menu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
