added widget scoreboard

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -803,9 +803,43 @@ PointLight.Lightmass=True
 PointLight.Rendering=True
 PointLight.Light=True
 PointLight.TransformCommon=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Scoreboardactor_C.Tick=True
+Scoreboardactor_C.Replication=True
+Scoreboardactor_C.Rendering=True
+Scoreboardactor_C.Collision=True
+Scoreboardactor_C.Actor=True
+Scoreboardactor_C.Input=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+Scoreboardactor_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -865,9 +899,9 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-ScreenPosition=X=320.000 Y=148.800
+ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1285.600 Y=725.600
+WindowSize=X=1285.000 Y=725.000
 None=======
 InitiallyMaximized=True
 
@@ -914,7 +948,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -2005,26 +2039,26 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Menu
-MRUItem1=/Game/VRTemplate/Blueprints/Baseball
-MRUItem2=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem3=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem4=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem5=/Game/Baseball/baseball
-MRUItem6=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem7=/Game/Baseball/Scene_-_Root
-MRUItem8=/Game/Meshes/BaseballBatWithPhysics
-MRUItem9=/Game/VRTemplate/Blueprints/target
-MRUItem10=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem11=/sketchfa/baseball/baseball
-MRUItem12=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem13=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem14=/Game/Meshes/lambert1
-MRUItem15=/Game/Meshes/baseball_ball_01
-MRUItem16=/Game/Meshes/StaticMesh1
-MRUItem17=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem18=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
-MRUItem19=/Game/VRTemplate/Blueprints/Weapon
+MRUItem0=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem1=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem2=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem3=/Game/VRTemplate/Blueprints/Menu
+MRUItem4=/Game/VRTemplate/Blueprints/Baseball
+MRUItem5=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem6=/Game/Baseball/baseball
+MRUItem7=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem8=/Game/Baseball/Scene_-_Root
+MRUItem9=/Game/Meshes/BaseballBatWithPhysics
+MRUItem10=/Game/VRTemplate/Blueprints/target
+MRUItem11=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem12=/sketchfa/baseball/baseball
+MRUItem13=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem14=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem15=/Game/Meshes/lambert1
+MRUItem16=/Game/Meshes/baseball_ball_01
+MRUItem17=/Game/Meshes/StaticMesh1
+MRUItem18=/Game/VRTemplate/Blueprints/Baseball_bat_LP
+MRUItem19=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2042,10 +2076,11 @@ StreamableRenderAsset=
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
