--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -835,11 +835,38 @@ WidgetComponent.ComponentReplication=True
 WidgetComponent.Cooking=True
 WidgetComponent.Events=True
 Scoreboardactor_C.TransformCommon=True
+SoundCue.Memory=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Effects=True
+SoundCue.Developer=True
+SoundCue.Voice Management=True
+SoundNodeModulator.Modulation=True
+SoundCue.AttenuationDistance=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.AttenuationSubmixSend=True
+SoundCue.AttenuationReverbSend=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.AttenuationPriority=True
+SoundCue.AttenuationAirAbsorption=True
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+SoundNodeLooping.Looping=True
+SoundNodeWavePlayer.WavePlayer=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2039,26 +2066,26 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem1=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem2=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem3=/Game/VRTemplate/Blueprints/Menu
-MRUItem4=/Game/VRTemplate/Blueprints/Baseball
-MRUItem5=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem6=/Game/Baseball/baseball
-MRUItem7=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem8=/Game/Baseball/Scene_-_Root
-MRUItem9=/Game/Meshes/BaseballBatWithPhysics
-MRUItem10=/Game/VRTemplate/Blueprints/target
-MRUItem11=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem12=/sketchfa/baseball/baseball
-MRUItem13=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem14=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem15=/Game/Meshes/lambert1
-MRUItem16=/Game/Meshes/baseball_ball_01
-MRUItem17=/Game/Meshes/StaticMesh1
-MRUItem18=/Game/VRTemplate/Blueprints/Baseball_bat_LP
-MRUItem19=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3
+MRUItem0=/Game/VRTemplate/Audio/Music
+MRUItem1=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem2=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem3=/Game/VRTemplate/Blueprints/Music
+MRUItem4=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem5=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem6=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem7=/Game/VRTemplate/Blueprints/Menu
+MRUItem8=/Game/VRTemplate/Blueprints/Baseball
+MRUItem9=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem10=/Game/Baseball/baseball
+MRUItem11=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem12=/Game/Baseball/Scene_-_Root
+MRUItem13=/Game/Meshes/BaseballBatWithPhysics
+MRUItem14=/Game/VRTemplate/Blueprints/target
+MRUItem15=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem16=/sketchfa/baseball/baseball
+MRUItem17=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem18=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem19=/Game/Meshes/lambert1
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2120,6 +2147,9 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/Baseball.Baseball=1
 /Game/VRTemplate/Blueprints/WidgetMenu.WidgetMenu=1
 /Game/VRTemplate/Blueprints/Menu.Menu=1
+/Game/VRTemplate/Audio/Fire_Cue.Fire_Cue=1
+/Game/VRTemplate/Audio/TakeMeOuttotheballgame.TakeMeOuttotheballgame=1
+/Game/VRTemplate/Audio/Music.Music=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
