--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -864,9 +864,16 @@ SoundWave.Effects=True
 SoundWave.Attenuation=True
 SoundNodeLooping.Looping=True
 SoundNodeWavePlayer.WavePlayer=True
+SoundNodeSwitch.Switch=True
+SoundNodeDelay.Delay=True
+SoundNodeRandom.Random=True
+SoundNodeBranch.Branch=True
+SoundNodeGroupControl.GroupControl=True
+SoundNodeSoundClass.SoundClass=True
+SoundNodeConcatenator.Concatenator=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -957,7 +964,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Audio
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2107,6 +2114,7 @@ Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Audio/Music.Music;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Baseball/baseball.baseball;
