Added Scoreboard 0 bound

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -864,9 +864,22 @@ SoundWave.Effects=True
 SoundWave.Attenuation=True
 SoundNodeLooping.Looping=True
 SoundNodeWavePlayer.WavePlayer=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+VRGameMode_C.Tick=True
+VRGameMode_C.Classes=True
+VRGameMode_C.Game=True
+VRGameMode_C.GameMode=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -928,7 +941,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1285.000 Y=725.000
+WindowSize=X=1286.400 Y=726.400
 None=======
 InitiallyMaximized=True
 
@@ -975,7 +988,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Github/Final-project/FinalVRProject/Content/VRTemplate/Maps
+UNR=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/VRTemplate/Maps
 BRUSH=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBX=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
 FBXAnim=../../../../../../Users/sari/Documents/GitHub/Final-project/FinalVRProject/Content/
@@ -2066,26 +2079,26 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Audio/Music
-MRUItem1=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem2=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem3=/Game/VRTemplate/Blueprints/Music
-MRUItem4=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem5=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem6=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem7=/Game/VRTemplate/Blueprints/Menu
-MRUItem8=/Game/VRTemplate/Blueprints/Baseball
-MRUItem9=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem10=/Game/Baseball/baseball
-MRUItem11=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem12=/Game/Baseball/Scene_-_Root
-MRUItem13=/Game/Meshes/BaseballBatWithPhysics
-MRUItem14=/Game/VRTemplate/Blueprints/target
-MRUItem15=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem16=/sketchfa/baseball/baseball
-MRUItem17=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem18=/sketchfa/baseball/Scene_-_Root_normal
-MRUItem19=/Game/Meshes/lambert1
+MRUItem0=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem1=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem2=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem3=/Game/VRTemplate/Audio/Music
+MRUItem4=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem5=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem6=/Game/VRTemplate/Blueprints/Music
+MRUItem7=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem8=/Game/VRTemplate/Blueprints/Menu
+MRUItem9=/Game/VRTemplate/Blueprints/Baseball
+MRUItem10=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem11=/Game/Baseball/baseball
+MRUItem12=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem13=/Game/Baseball/Scene_-_Root
+MRUItem14=/Game/Meshes/BaseballBatWithPhysics
+MRUItem15=/Game/VRTemplate/Blueprints/target
+MRUItem16=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
+MRUItem17=/sketchfa/baseball/baseball
+MRUItem18=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
+MRUItem19=/sketchfa/baseball/Scene_-_Root_normal
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
