Added On Hit add 1 to score widget

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -874,12 +874,18 @@ PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
+VRGameMode_C.Default=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/target.target
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Baseball.Baseball
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -941,7 +947,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 None=======
 InitiallyMaximized=True
 
@@ -1963,6 +1969,7 @@ StaticMesh.Collision=True
 StaticMesh.LODCustomMode=True
 FbxImportUI.Material=True
 PreviewMaterial.Material=True
+StaticMeshComponent.Collision=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2079,22 +2086,22 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem1=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem2=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem3=/Game/VRTemplate/Audio/Music
-MRUItem4=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem5=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem6=/Game/VRTemplate/Blueprints/Music
-MRUItem7=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem8=/Game/VRTemplate/Blueprints/Menu
-MRUItem9=/Game/VRTemplate/Blueprints/Baseball
-MRUItem10=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem11=/Game/Baseball/baseball
-MRUItem12=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem13=/Game/Baseball/Scene_-_Root
-MRUItem14=/Game/Meshes/BaseballBatWithPhysics
-MRUItem15=/Game/VRTemplate/Blueprints/target
+MRUItem0=/Game/VRTemplate/Blueprints/Baseball
+MRUItem1=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem2=/Game/VRTemplate/Blueprints/target
+MRUItem3=/Game/VRTemplate/Blueprints/Scoreboard
+MRUItem4=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem5=/Game/VRTemplate/Audio/Music
+MRUItem6=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem7=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem8=/Game/VRTemplate/Blueprints/Music
+MRUItem9=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem10=/Game/VRTemplate/Blueprints/Menu
+MRUItem11=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem12=/Game/Baseball/baseball
+MRUItem13=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem14=/Game/Baseball/Scene_-_Root
+MRUItem15=/Game/Meshes/BaseballBatWithPhysics
 MRUItem16=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
 MRUItem17=/sketchfa/baseball/baseball
 MRUItem18=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
@@ -2118,14 +2125,19 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
-RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
 RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
@@ -2163,6 +2175,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Audio/Fire_Cue.Fire_Cue=1
 /Game/VRTemplate/Audio/TakeMeOuttotheballgame.TakeMeOuttotheballgame=1
 /Game/VRTemplate/Audio/Music.Music=1
+/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode=1
+/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2352,4 +2366,7 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
