--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -880,12 +880,43 @@ EdGraph.Inputs=True
 EdGraph.Outputs=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+Timer_C.Tick=True
+Timer_C.Replication=True
+Timer_C.Rendering=True
+Timer_C.Collision=True
+Timer_C.Actor=True
+Timer_C.Input=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+TimerDisplay_C.Appearance=True
+TimerDisplay_C.Designer=True
+TimerDisplay_C.Input=True
+TimerDisplay_C.Interaction=True
+TimerDisplay_C.Performance=True
+TimerDisplay_C.Layout=True
+TimerDisplay_C.Behavior=True
+TimerDisplay_C.Render Transform=True
+TimerDisplay_C.Accessibility=True
+TimerDisplay_C.Clipping=True
+TimerDisplay_C.Navigation=True
+TimerDisplay_C.Localization=True
+TimerActor_C.Tick=True
+TimerActor_C.Replication=True
+TimerActor_C.Rendering=True
+TimerActor_C.Collision=True
+TimerActor_C.Actor=True
+TimerActor_C.Input=True
+TimerActor_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/target.target
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Baseball.Baseball
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerDisplay.TimerDisplay
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -947,7 +978,7 @@ InstalledPlugins=XRVisualization
 ScreenPosition=X=320.000 Y=149.600
 ScreenPosition=X=320.000 Y=148.000
 WindowSize=X=1284.800 Y=724.800
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1291.200 Y=731.200
 None=======
 InitiallyMaximized=True
 
@@ -2086,26 +2117,26 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Baseball
-MRUItem1=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem2=/Game/VRTemplate/Blueprints/target
+MRUItem0=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem1=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem2=/Game/VRTemplate/Blueprints/VRGameMode
 MRUItem3=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem4=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem5=/Game/VRTemplate/Audio/Music
-MRUItem6=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem7=/Game/VRTemplate/Audio/Fire_Cue
-MRUItem8=/Game/VRTemplate/Blueprints/Music
-MRUItem9=/Game/VRTemplate/Blueprints/WidgetMenu
-MRUItem10=/Game/VRTemplate/Blueprints/Menu
-MRUItem11=/Game/VRTemplate/Blueprints/BaseballBat
-MRUItem12=/Game/Baseball/baseball
-MRUItem13=/Game/Baseball/Scene_-_Root_Scene_-_Root
-MRUItem14=/Game/Baseball/Scene_-_Root
-MRUItem15=/Game/Meshes/BaseballBatWithPhysics
-MRUItem16=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
-MRUItem17=/sketchfa/baseball/baseball
-MRUItem18=/sketchfa/baseball/Scene_-_Root_Scene_-_Root
-MRUItem19=/sketchfa/baseball/Scene_-_Root_normal
+MRUItem4=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem5=/Game/VRTemplate/Blueprints/Timer
+MRUItem6=/Game/VRTemplate/Blueprints/target
+MRUItem7=/Game/VRTemplate/Blueprints/Baseball
+MRUItem8=/Game/VRTemplate/Audio/Music
+MRUItem9=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
+MRUItem10=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem11=/Game/VRTemplate/Blueprints/Music
+MRUItem12=/Game/VRTemplate/Blueprints/WidgetMenu
+MRUItem13=/Game/VRTemplate/Blueprints/Menu
+MRUItem14=/Game/VRTemplate/Blueprints/BaseballBat
+MRUItem15=/Game/Baseball/baseball
+MRUItem16=/Game/Baseball/Scene_-_Root_Scene_-_Root
+MRUItem17=/Game/Baseball/Scene_-_Root
+MRUItem18=/Game/Meshes/BaseballBatWithPhysics
+MRUItem19=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2132,6 +2163,7 @@ SceneComponent=
 ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/TimerActor.TimerActor;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2177,6 +2209,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Audio/Music.Music=1
 /Game/VRTemplate/Blueprints/VRGameMode.VRGameMode=1
 /Game/VRTemplate/Blueprints/Scoreboard.Scoreboard=1
+/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor=1
+/Game/VRTemplate/Blueprints/TimerActor.TimerActor=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
