--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -908,15 +908,23 @@ TimerActor_C.Collision=True
 TimerActor_C.Actor=True
 TimerActor_C.Input=True
 TimerActor_C.TransformCommon=True
+Timer_C.Default=True
+Timer_C.TransformCommon=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableGet.Events=True
+TimerActor_C.Default=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/target.target
+CleanShutdown=False
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Timer.Timer
+OpenAssetsAtExit=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap:PersistentLevel.VRTemplateMap
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
 OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerDisplay.TimerDisplay
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboard.Scoreboard
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2117,12 +2125,12 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem1=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem2=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem3=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem4=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem5=/Game/VRTemplate/Blueprints/Timer
+MRUItem0=/Game/VRTemplate/Blueprints/TimerDisplay
+MRUItem1=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem2=/Game/VRTemplate/Blueprints/Timer
+MRUItem3=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem4=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem5=/Game/VRTemplate/Blueprints/Scoreboard
 MRUItem6=/Game/VRTemplate/Blueprints/target
 MRUItem7=/Game/VRTemplate/Blueprints/Baseball
 MRUItem8=/Game/VRTemplate/Audio/Music
@@ -2163,6 +2171,7 @@ SceneComponent=
 ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/Timer.Timer;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/TimerActor.TimerActor;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/target.target;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor;
@@ -2403,4 +2412,15 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=StaticMeshComponent.Collision.Collision,
+Baseball_C=StaticMeshComponent.Collision.Collision,
+target_C=StaticMeshComponent.Collision.Collision,
+TimerActor_C=StaticMeshComponent.Collision.Collision,
+Timer_C=
+PropertyWrapper=StaticMeshComponent.Collision.Collision,
+TimerDisplay_C=
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
+K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
+K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
+VRTemplateMap_C=StaticMeshComponent.Collision.Collision,
 
